syntax = "proto3";

package task3;

import "google/api/annotations.proto";

service IMother {
    rpc ListMother (ListMotherRequest) returns (ListMotherResponse) {
        option (google.api.http) = {
                  get:"/mothers"
        };
    }
}

message Mother {
    int64 id = 1;
    string Firstname = 2;
    string Lastname = 3;
    string Patronymic = 4;
}

message ListMotherRequest {
}

message ListMotherResponse {
    repeated Mother Mothers = 1;
}


